Changed method to create project with step with done task